--- a/spring-msa/msa-auth-server/src/main/resources/application.properties
+++ b/spring-msa/msa-auth-server/src/main/resources/application.properties
@@ -3,5 +3,19 @@ security.oauth2.client.client-id=auth_id
 security.oauth2.client.client-secret=auth_secret
 security.oauth2.resource.jwt.key-value=jwt_secret_key
 
+#security.oauth2.authorization.check-token-access= isAuthenticated()
+#security.resource.token-info-uri=http://localhost:8095/oauth/check_token
+
+spring.datasource.url=jdbc:h2:file:~/test
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+server.tomcat.access-log.enabled=true
+
+#spring.mvc.view.prefix=/WEB-INF/jsp/
+#spring.mvc.view.suffix=.jsp
+#spring.resources.static-locations=classpath:/WEB-INF/static/
