--- a/spring-msa/msa-auth-server/build.gradle
+++ b/spring-msa/msa-auth-server/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 apply plugin: 'io.spring.dependency-management'
 
-group = 'gateway.api.msa'
+group = 'server.auth.msa'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
@@ -18,6 +18,7 @@ configurations {
 
 repositories {
 	mavenCentral()
+
 }
 
 ext {
@@ -28,11 +29,25 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.cloud:spring-cloud-starter-oauth2'
 	implementation 'org.springframework.cloud:spring-cloud-starter-security'
-    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-    compile 'org.projectlombok:lombok:1.18.6'
+
+	implementation 'org.apache.commons:commons-lang3:3.12.0' // 유틸리티 사용을 위함
+	implementation 'com.konghq:unirest-java:3.13.10' // http 통신을 쉽게 하기 위함
+
+    	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
 	compile 'com.h2database:h2'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+   compileOnly 'org.projectlombok:lombok:1.18.24'
+   annotationProcessor 'org.projectlombok:lombok:1.18.24'
+   
+   testCompileOnly 'org.projectlombok:lombok:1.18.24'
+   testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
+
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+
+
 }
 
 dependencyManagement {
